--- a/about.html
+++ b/about.html
@@ -42,8 +42,8 @@
 
 			<article>
 				<h2> ABOUT ALBATROSS </h2>
-				<p>This website was developed by a Level 2 NCEA Digital Media student as part of an assessment.</p>
-				<p> We would love to hear from you, so if you have any feedback about Albatross or would like more information about it please contact 12DTM teacher Mr Fairhall (shane.fairhall@onslow.school.nz).</p>
+				<p>This website was originally developed for a school project.</p>
+				<p> We would love to hear from you, so if you have any feedback about Albatross or would like more information about it please contact the developer at jjmckenzie304@gmail.com.</p>
 			</article>
 		</main>
 
