--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ Plugins Used: bxSlider, sidr. I acknowledge that these scripts are not my own.
 
 			<article>
 				<h2> WELCOME TO ALBATROSS </h2>
-				<p>Welcome! Albatross is a website designed to teach the Python programming language to aspiring programmers. We offer simple tutorials on the basics of Python (variables, loops and if/else statements), lists (including multidimensional lists), dictionaries and functions.</p>
-				<p> This website is designed to be most useful to Digital Technologies students in year 11, including students who are new to Python and more experienced students who want to know more advanced programming techniques such as functions (this way you can get a headstart going into year 12 DTC). However, it should also be useful to anyone wanting to learn Python.</p> <p> To get started, simply choose one of the courses above!</p>
+				<p>Welcome! Albatross is a website designed to teach the basics of the Python programming language. We currently offer simple tutorials on variables, loops, if/else statements, lists (including multidimensional lists), dictionaries and functions.</p>
+				<p> This website is designed to be most useful to people who have never programmed before. However, it should also be useful to anyone who has learned another programming language beforehand and wants to get started with Python.</p> <p> To get started, simply choose one of the courses above!</p>
 			</article>
 		</main>
 
