--- a/lists_intro.html
+++ b/lists_intro.html
@@ -38,8 +38,8 @@
 
 			<article>
 				<h2> LISTS - INTRODUCTION </h2>
-				<p>In programming, an essential component is that of an array. Arrays refer to pieces of code that store data - this data can come from anywhere, from already existing in the program to being entered by a user.</p>
-				<p> There are many different kinds of arrays, but the one most people learn about first is the list. Lists are defined by order, as opposed to other kinds of arrays such as dictionaries where order does not matter. This means that in a list, the first item always come first, the second item always comes second etc. You can put almost anything in a list - strings, integers, variables, constants, even other lists!</p> 
+				<p>In programming, an essential component is that of the data structure. The data in these structures can come from anywhere, from already existing in the program to being entered by a user.</p>
+				<p> There are many different kinds of data structures, but the one most people learn about first is the list. Lists are defined by order, as opposed to other kinds of data structures such as dictionaries where order does not matter. This means that in a list, the first item always come first, the second item always comes second etc. You can put almost anything in a list - strings, integers, variables, constants, even other lists!</p> 
 				<p> In this course, we will cover how to create, modify, sort and manipulate both 1 and 2-Dimensional lists in Python.</p>
 				<p> Each lesson will have some example code. Provided you have IDLE (or any other IDE) installed, you can copy this code to see what it does and play around with it.</p> 
 			</article>
