--- a/basics9.html
+++ b/basics9.html
@@ -39,7 +39,7 @@
 
 			<article>
 				<h2> PYTHON BASICS </h2>
-				<h3> Extra: Libraries </h3>
+				<h3> Libraries </h3>
 				<p>Like most programming languages, Python has many built-in libraries of code that can easily be imported into your programs.</p>
 				<p>The two libraries that most people learn about first are <code>random</code> and <code>time</code>. <code>random</code> lets you randomize things - for instance <code>random.randint()</code> generates a random number in a ceratin range (like in a for loop, the range is what goes inside the brackets). </p> 
 				<p><code>time</code> lets you bring elements of time into your program. For instance <code>time.sleep()</code> lets you delay a block of code from running by a certain number of seconds (the number of seconds is what goes in the brackets). Thinking in terms of usability, this is good to use to let the user know that something is happening in your program.</p>
